# verkle-kzg

./: .gitignore  Cargo.toml  README.md
benches/: proofs.rs
src/: data_structures.rs  kzg_amortized.rs  lib.rs  verkle.rs  verkle_tree.rs
vector-commit/: Cargo.toml  README.md
vector-commit/benches/: ipa.rs  kzg.rs  proofs.rs
vector-commit/src/: ipa.rs  kzg_amortized.rs  lagrange_basis.rs  lib.rs  multiproof.rs  precompute.rs  transcript.rs  utils.rs
vector-commit/src/ipa/: ipa_point_generator.rs  mod.rs
vector-commit/src/kzg/: kzg_point_generator.rs  mod.rs
verkle-tree/: Cargo.toml
verkle-tree/src/: lib.rs  node.rs
