[package]
name = "vector-commit"
description = "A collection of traits to use with vector commitment schemes, and a few implementations of VC"
version = "0.1.0"
authors = ["SleepingShell"]
keywords = ["cryptography"]
repository = "https://github.com/SleepingShell/verkle-tree-rs/tree/main/vector-commit"
edition = "2021"
license = "MIT"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-bn254 = "0.4"
num = "0.4.1"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "proofs"
harness = false

[profile.release]
debug = true
