[package]
name = "vector-commit"
description = "A collection of traits to use with vector commitment schemes, and a few implementations of VC"
version = "0.1.0"
authors = ["SleepingShell"]
keywords = ["cryptography"]
repository = "https://github.com/SleepingShell/verkle-tree-rs/tree/main/vector-commit"
edition = "2021"
license = "MIT"

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-bn254 = "0.4"
ark-serialize = "0.4.2"
num = "0.4.1"
rand = "0.8.5"
digest = "0.10.7"
sha2 = "0.10.7"
thiserror = "1.0.48"
itertools = "0.11.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "ipa"
harness = false

[profile.release]
debug = true
