[package]
name = "verkle-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.14.0"
num = "0.4.1"
rand = "0.8.5"
vector-commit = { path = "../vector-commit" }

[dev-dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4"
ark-poly = "0.4"
ethereum-types = "0.14.1"
sha2 = "0.10.7"
